// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="sc-gZMcBi jDRBlW"
>
  <form
    className="sc-bdVaJa fyQqOy"
    onSubmit={[Function]}
  >
    <input
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      className="sc-htpNat epXOEy sc-bwzfXH bPLioj"
      name="userName"
      onChange={[Function]}
      placeholder="Name"
      spellCheck={false}
      type="text"
      value=""
    />
    <input
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      className="sc-htpNat epXOEy sc-bwzfXH bPLioj"
      name="message"
      onChange={[Function]}
      placeholder="Comment about this item..."
      spellCheck={false}
      type="text"
      value=""
    />
  </form>
  <ul
    className="sc-gzVnrw dooAse"
  >
    <li
      className="sc-htoDjs hiQaFW"
    >
      <span
        className="sc-dnqmqq icGvMt"
      >
        legend27
      </span>
      <span
        className="sc-iwsKbI uTWQM"
      >
        This Taylor Swift song is amzaing
      </span>
    </li>
    <li
      className="sc-htoDjs hiQaFW"
    >
      <span
        className="sc-dnqmqq icGvMt"
      >
        taylorSwift
      </span>
      <span
        className="sc-iwsKbI uTWQM"
      >
        really appreciated
      </span>
    </li>
  </ul>
</div>
`;

exports[`renders correctly when there are no comments 1`] = `
<div
  className="sc-gZMcBi jDRBlW"
>
  <form
    className="sc-bdVaJa fyQqOy"
    onSubmit={[Function]}
  >
    <input
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      className="sc-htpNat epXOEy sc-bwzfXH bPLioj"
      name="userName"
      onChange={[Function]}
      placeholder="Name"
      spellCheck={false}
      type="text"
      value=""
    />
    <input
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      className="sc-htpNat epXOEy sc-bwzfXH bPLioj"
      name="message"
      onChange={[Function]}
      placeholder="Comment about this item..."
      spellCheck={false}
      type="text"
      value=""
    />
  </form>
  <p
    className="sc-gqjmRU btpZLC"
  >
    There are no comments here yet.
  </p>
</div>
`;
